--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
-APPLICATION_PORT=3000
-APPLICATION_NAME=
+APPLICATION_PORT=3001
+APPLICATION_NAME="Application name"
 
-#OTHER PROPS
+ENABLE_EUREKA=false
+
+SELF_PUBLIC_IP_ADDRESS="192.168.0.186"
+
+EUREKA_HOST_IP=192.168.0.254
+EUREKA_HOST_PORT=8888
+EUREKA_HOST_SERVICE_PATH="/eureka/apps"
+
