--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-shell",
+  "name": "razcall",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.ts",
@@ -11,7 +11,8 @@
   "scripts": {
     "start:prod": "node build/app.js",
     "start:dev": "nodemon",
-    "build": "rimraf ./build && tsc"
+    "lint": "eslint . --ext .ts",
+    "build": "eslint . --ext .ts --fix && rimraf ./build && tsc"
   },
   "author": "jakub.bartusiak",
   "license": "ISC",
@@ -20,13 +21,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eureka-js-client": "^4.5.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/eureka-js-client": "^4.5.2",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.1",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.1",
