First mongo test

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ EUREKA_HOST_IP=192.168.0.254
 EUREKA_HOST_PORT=8888
 EUREKA_HOST_SERVICE_PATH="/eureka/apps"
 
+DB_HOST=localhost
+DB_PORT=27017
+DB_PASSWORD=password
+DB_USER=root
+DB_NAME=razcall
