--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "dotenv": "^8.2.0",
     "eureka-js-client": "^4.5.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mongoose": "^5.9.28"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/eureka-js-client": "^4.5.2",
     "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.0.1",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
