--- a/package.json
+++ b/package.json
@@ -1,42 +1,38 @@
 {
-  "name": "razcall",
+  "name": "@bartusiak/razcall-connector",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/app.ts",
+  "description": "This is a shell for express apps with typescript",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "homepage": "https://github.com/jbartusiak/express-shell",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jbartusiak/express-shell"
+    "url": "git+https://github.com/jbartusiak/express-shell.git"
   },
   "scripts": {
-    "start:prod": "node build/app.js",
-    "start:dev": "nodemon",
     "lint": "eslint . --ext .ts",
-    "build": "eslint . --ext .ts --fix && rimraf ./build && tsc"
+    "prepare": "npm run build",
+    "build": "eslint src --ext .ts --fix && rimraf ./dist && tsc",
+    "push": "npm publish --access public"
   },
   "author": "jakub.bartusiak",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "eureka-js-client": "^4.5.0",
-    "express": "^4.17.1",
     "mongoose": "^5.9.28"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/eureka-js-client": "^4.5.2",
-    "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.0.1",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
-    "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.1",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
+  },
+  "bugs": {
+    "url": "https://github.com/jbartusiak/express-shell/issues"
   }
 }
