--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bartusiak/razcall-connector",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A simple mongo db logging utility",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,6 +21,7 @@
   "author": "jakub.bartusiak",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.28"
   },
