--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "eslint src --ext .ts --fix && rimraf ./dist && tsc",
     "lint": "eslint . --ext .ts",
     "prepare": "npm run build",
-    "push": "npm publish --access public"
+    "push": "npm publish --access public",
+    "test": "jest"
   },
   "author": "jakub.bartusiak",
   "license": "ISC",
@@ -26,12 +27,15 @@
     "mongoose": "^5.9.28"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.9",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.0.1",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "eslint": "^7.6.0",
+    "jest": "^26.3.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.2.0",
     "ts-loader": "^8.0.1",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
