--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "declaration": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src"
+  ],
+  "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
