--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,11 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "env": {
+    "browser": true,
+    "amd": true,
+    "node": true
+  },
   "plugins": [
     "@typescript-eslint"
   ],
