--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bartusiak/razcall-connector",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A simple mongo db logging utility",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "eslint src --ext .ts --fix && rimraf ./dist && tsc",
     "lint": "eslint . --ext .ts",
-    "prepare": "npm run build",
+    "prepare": "npm run test && npm run build",
     "push": "npm publish --access public",
     "test": "jest"
   },
